hphp/hack/test/typecheck/attributes/file_attributes_wrong_type.php
<?hh // strict

<<file: X(3)>>
class X implements \HH\FileAttribute {
  public function __construct(public string $x) {}
}
